Show more of stop names on narrow screens

--- a/busstops/static/css/_base.scss
+++ b/busstops/static/css/_base.scss
@@ -617,7 +617,7 @@ input:not(:checked) + label {
             display: block;
             margin: -.25em -.5em;
             margin-left: 0;
-            max-width: 40vw;
+            max-width: calc(100vw - 12em);
             overflow: hidden;
             padding: .25em .5em;
             padding-left: 0;
